--- a/public/config.json
+++ b/public/config.json
@@ -11,66 +11,17 @@
       "execute": {
         "inArguments": [
           {
-            "staticValue": 0,
-            "databoundEmailAddress": "{{Event.EventKey.EmailAddress}}"
+            "contactKey" : "{{Contact.Key}}",
+            "FirstName" : "{{Contact.Attribute.JourneyEntrySource.FirstName}}",
+            "LastName" : "{{Contact.Attribute.JourneyEntrySource.LastName}}"
           }
         ],
-        "outArguments": [
-          {
-            "returnValue": "default"
-          }
-        ],
-        "timeout": 10000,
-        "retryCount": 1,
-        "retryDelay": 1000,
-        "concurrentRequests": 6,
         "url": "https://customsfmc-production.up.railway.app/execute"
       }
     },
     "configurationArguments": {
       "publish": {
         "url": "https://customsfmc-production.up.railway.app/publish"
-      }
-    },
-    "userInterfaces": {
-      "configModal": {
-        "fullscreen": true,
-        "url": "configModal.html"
-      },
-      "runningModal": {
-        "url": "runningModal.html"
-      },
-      "runningHover": {
-        "url": "runningHover.html"
-      }
-    },
-    "schema": {
-      "arguments": {
-        "execute": {
-          "inArguments": [
-            {
-              "staticValue": {
-                "dataType": "Number",
-                "isNullable": false,
-                "direction": "in"
-              },
-              "databoundEmailAddress": {
-                "dataType": "Email",
-                "isNullable": false,
-                "direction": "in"
-              }
-            }
-          ],
-          "outArguments": [
-            {
-              "returnValue": {
-                "dataType": "Text",
-                "isNullable": false,
-                "direction": "out"
-              }
-            }
-          ]
-        }
       }
     },
     "copySettings": {
