Added save, validate and execute

--- a/public/config.json
+++ b/public/config.json
@@ -25,6 +25,12 @@
     "applicationExtensionKey": "93687b7b-1a77-47e2-9aee-c1294d5e8f0d",
       "publish": {
         "url": "https://customsfmc-production.up.railway.app/publish"
+      },
+      "save": {
+        "url":"https://customsfmc-production.up.railway.app/save"
+      },
+      "validate":{
+        "url":"https://customsfmc-production.up.railway.app/validate"
       }
     }
   }
