Added method to getInArguments

--- a/public/config.json
+++ b/public/config.json
@@ -12,7 +12,7 @@
       "execute": {
         "inArguments": [
           {
-            "contactKey" : "{{Contact.Key}}",
+            "ContactKey" : "{{Contact.Key}}",
             "FirstName" : "{{Contact.Attribute.JourneyEntrySource.FirstName}}",
             "LastName" : "{{Contact.Attribute.JourneyEntrySource.LastName}}"
           }
