Updated field name

--- a/public/config.json
+++ b/public/config.json
@@ -13,7 +13,7 @@
       "inArguments": [
         {
           "ContactKey": "{{Contact.Key}}",
-          "IdOT": "{{Event.eventDefinitionKey.OrdenTrabajo}}"
+          "IdOT": "{{Event.eventDefinitionKey.IdOT}}"
         }
       ],
       "outArguments": [
