--- a/public/config.json
+++ b/public/config.json
@@ -13,7 +13,7 @@
       "inArguments": [
         {
           "ContactKey": "{{Contact.Key}}",
-          "IdOT": "{{Contact.Attribute.WA_Unificado_Sends.IdOT}}"
+          "IdOT": "{{Contact.Attribute."WA_Unificado_Sends".IdOT}}"
         }
       ],
       "outArguments": [
